# wizard_lint

./: .gitignore  README.MD  config.yaml  main.py  plan.txt  pyproject.toml  setup.py  test_sql.sql
.github/workflows/: linter.yml
app/: README.MD
app/wizard_lint/: __init__.py
app/wizard_lint/src/: __init__.py  main.py  render.py  utils.py
app/wizard_lint/tests/: test_render.py  test_retrieve.py
sql_folder/: dummy.sql  dummy_test.sql  sql_with_comments.sql  sql_with_comments_test.sql
sql_folder/nested_folder/: d.sql
tests/: test_render.py  test_retrieve.py
wizard_lint/: __init__.py  file_retriever.py  main.py  parser.py  render.py  retrieve.py  sql_parser.py
wizard_lint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wizard_lint_v1/: main.py
