[tool.poetry]
name = "wizard-lint"
version = "0.1.0"
description = "creating a package to add jinja templating to sql code"
authors = ["matias-olvin <matias@olvin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.2.0"
isort = "^5.13.2"
pyyaml = "^6.0.1"
rich = "^13.7.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
